Added integration tests for java-agent running on JDK 16 & 17.